--- a/templates/conventions/edd.html
+++ b/templates/conventions/edd.html
@@ -23,6 +23,11 @@
         <div class="fr-container">
             <form method="post" action="" enctype="multipart/form-data">
                 {% csrf_token %}
+                <input
+                    type="hidden"
+                    id="{{form.uuid.id_for_label}}"
+                    name="{{form.uuid.html_name}}"
+                    value="{{ form.uuid.value|default_if_none:'' }}">
                 <div class="fr-grid-row fr-grid-row--gutters">
                     <div class="fr-col-md-12 fr-mt-5w">
                         <!-- <h2>Etape {{convention_form_step}}/{{ nb_steps }} - État descriptif de division</h2> -->
@@ -42,10 +47,10 @@
 
                         <h4 class="fr-mb-1w">EDD Simplifié</h4>
 
-                        {% if editable %}
+                        <div id='download_upload_block' {% if not editable %}hidden{% endif %}>
                             {% include "common/form/download_upload_form.html" with convention_uuid=convention.uuid file_type='logements_edd' upform=upform  what="logements pour l'EDD simplifié"%}
                             <hr class="fr-col-12 fr-my-3w">
-                        {% endif %}
+                        </div>
 
                         {% for error in import_warnings %}
                             <p id="text-input-error-desc-error" class="fr-error-text">
@@ -115,14 +120,7 @@
                                 <thead>
                                     <tr>
                                         {% if convention.statut != 'BROUILLON' %}
-                                            <th scope="col">
-                                                <div class="content__icons content__icons--darkgrey">
-                                                    <svg role="img" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewbox="0 0 24 24" aria-labelledby="chatIconTitle">
-                                                        <title id="chatIconTitle">Comments</title>
-                                                        <path d="M8.82388455,18.5880577 L4,21 L4.65322944,16.4273939 C3.00629211,15.0013 2,13.0946628 2,11 C2,6.581722 6.4771525,3 12,3 C17.5228475,3 22,6.581722 22,11 C22,15.418278 17.5228475,19 12,19 C10.8897425,19 9.82174472,18.8552518 8.82388455,18.5880577 Z"></path>
-                                                    </svg>
-                                                </div>
-                                            </th>
+                                            {% include 'common/utils/comments_header.html' with comment_prefix='logement_edd__uuid__' header_id='header_icon_logement_edd' %}
                                         {% endif %}
                                         <th scope="col">Financement {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
                                         <th scope="col">Désignation {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
@@ -130,28 +128,28 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    {% for form in formset %}
-                                        {% with input_id="logement_edd_"|add:form.uuid.value main_object_field="logement_edd__uuid__"|add:form.uuid.value %}
+                                    {% for form_edd in formset %}
+                                        {% with input_id="logement_edd_"|add:form_edd.uuid.value main_object_field="logement_edd__uuid__"|add:form_edd.uuid.value %}
                                             <tr>
                                                 {% if convention.statut != 'BROUILLON' %}
-                                                    <td id="{{form.uuid.id_for_label}}_div">
-                                                        {% include "common/comment_icon.html" with form_input_id=form.uuid.id_for_label object_field=main_object_field comments=comments %}
-                                                        {% include "common/comment_dialog.html" with form_input_id=form.uuid.id_for_label form_input_html=form.uuid.html_name convention=convention object_field=main_object_field comments=comments %}
+                                                    <td id="{{form_edd.uuid.id_for_label}}_div">
+                                                        {% include "common/comment_icon.html" with form_input_id=form_edd.uuid.id_for_label object_field=main_object_field comments=comments %}
+                                                        {% include "common/comment_dialog.html" with form_input_id=form_edd.uuid.id_for_label form_input_html=form_edd.uuid.html_name convention=convention object_field=main_object_field comments=comments %}
                                                     </td>
                                                 {% endif %}
                                                 <td>
                                                     <input
                                                         type="hidden"
-                                                        id="{{form.uuid.id_for_label}}"
-                                                        name="{{form.uuid.html_name}}"
-                                                        value="{{ form.uuid.value|default_if_none:'' }}">
-                                                    {% include "common/form/select_enum.html" with form_input=form.financement enum=financements parent_object_field=main_object_field %}
+                                                        id="{{form_edd.uuid.id_for_label}}"
+                                                        name="{{form_edd.uuid.html_name}}"
+                                                        value="{{ form_edd.uuid.value|default_if_none:'' }}">
+                                                    {% include "common/form/select_enum.html" with form_input=form_edd.financement enum=financements parent_object_field=main_object_field editable=editable_upload %}
                                                 </td>
                                                 <td>
-                                                    {% include "common/form/input_text.html" with form_input=form.designation parent_object_field=main_object_field %}
+                                                    {% include "common/form/input_text.html" with form_input=form_edd.designation parent_object_field=main_object_field editable=editable_upload %}
                                                 </td>
                                                 <td>
-                                                    {% include "common/form/select_enum.html" with form_input=form.typologie enum=typologies parent_object_field=main_object_field %}
+                                                    {% include "common/form/select_enum.html" with form_input=form_edd.typologie enum=typologies parent_object_field=main_object_field editable=editable_upload %}
                                                 </td>
                                             </tr>
                                         {% endwith %}
