--- a/templates/conventions/instructeur_validation.html
+++ b/templates/conventions/instructeur_validation.html
@@ -1,4 +1,4 @@
-{% if request.user.is_instructeur and convention.statut != 'BROUILLON' %}
+{% if request.session.is_instructeur and convention.statut != 'BROUILLON' %}
     <div class="fr-col-md-12  fr-py-5w">
         <div role="alert" class="fr-alert fr-alert--error">
             {% if convention.is_instruction_ongoing %}
