fix typo maxinum to maximum

--- a/templates/conventions/annexes.html
+++ b/templates/conventions/annexes.html
@@ -62,7 +62,7 @@
                                         <th scope="col" class="col__width--150">Typologie des logements {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
                                         <th scope="col" class="col__width--120">Surface de l'annexe {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
                                         <th scope="col" class="col__width--120">Loyer unitaire en € {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
-                                        <th scope="col" class="col__width--120">Loyer maxinum du logement en € {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
+                                        <th scope="col" class="col__width--120">Loyer maximum du logement en € {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
                                     </tr>
                                 </thead>
                                 <tbody>
