--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -405,9 +405,9 @@
                                                         <th scope="col" class="col__width--120">Surface des annexes réelle {% include "common/mandatory_field_star.html" %}</th>
                                                         <th scope="col" class="col__width--120">Surface des annexes retenue dans la SU {% include "common/mandatory_field_star.html" %}</th>
                                                         <th scope="col" class="col__width--120">Surface Utile {% include "common/mandatory_field_star.html" %}</th>
-                                                        <th scope="col" class="col__width--120">Loyer maxinum en € par m² de surface utile {% include "common/mandatory_field_star.html" %}</th>
+                                                        <th scope="col" class="col__width--120">Loyer maximum en € par m² de surface utile {% include "common/mandatory_field_star.html" %}</th>
                                                         <th scope="col" class="col__width--120">Coefficient propre au logement {% include "common/mandatory_field_star.html" %}</th>
-                                                        <th scope="col" class="col__width--120">Loyer maxinum du logement en € {% include "common/mandatory_field_star.html" %}</th>
+                                                        <th scope="col" class="col__width--120">Loyer maximum du logement en € {% include "common/mandatory_field_star.html" %}</th>
                                                     </tr>
                                                 </thead>
                                                 <tbody>
@@ -512,7 +512,7 @@
                                                         <th scope="col" class="col__width--150">Typologie des logements {% include "common/mandatory_field_star.html" %}</th>
                                                         <th scope="col" class="col__width--120">Surface de l'annexe {% include "common/mandatory_field_star.html" %}</th>
                                                         <th scope="col" class="col__width--120">Loyer unitaire en € {% include "common/mandatory_field_star.html" %}</th>
-                                                        <th scope="col" class="col__width--120">Loyer maxinum du logement en € {% include "common/mandatory_field_star.html" %}</th>
+                                                        <th scope="col" class="col__width--120">Loyer maximum du logement en € {% include "common/mandatory_field_star.html" %}</th>
                                                     </tr>
                                                 </thead>
                                                 <tbody>
