resolve stats link

--- a/templates/layout/footer.html
+++ b/templates/layout/footer.html
@@ -45,7 +45,7 @@
                     <a class="fr-footer__bottom-link" href="{% url 'cgu' %}">Conditions générales d'utilisation (mentions légales et gestion des données personnelles)</a>
                 </li>
                 <li class="fr-footer__bottom-item">
-                    <a class="fr-footer__bottom-link" href="#">Statistiques</a>
+                    <a class="fr-footer__bottom-link" href="{% url 'stats:index' %}">Statistiques</a>
                 </li>
             </ul>
             <div class="fr-footer__bottom-copy">
