--- a/templates/settings/administrations.html
+++ b/templates/settings/administrations.html
@@ -12,14 +12,37 @@
                     {% include 'settings/common/side_menu.html' with active_menu='administrations' %}
                 </div>
                 <div class='fr-col-12 fr-col-md-8 fr-col-lg-9 fr-pl-md-3w'>
-                    <h4>Gérer ou visualiser vos administrations</h4>
-                    <p>
-                        En tant qu'Instructeur, vous voyez la liste de vos administrations. (si vous en êtes l'administrateur),
-                        vous pouvez modifier les paramètres tel que la ville de signature ou le nombre d'examplaire
-                    </p>
-                    <p>
-                        En tant que Bailleur, vous voyez la liste des administrations attaché aux programme de votre bailleur
-                    </p>
+                    <div class="fr-table fr-table--bordered table--layout-fixed">
+                        <table>
+                            <caption>{{administrations.paginator.count}} administration{% if administrations.paginator.count > 1 %}s{% endif %}</caption>
+
+                            <thead>
+                                <tr>
+                                    <th scope="col">
+                                        Nom
+                                    </th>
+                                    <th scope="col">
+                                        Code
+                                    </th>
+                                    <th scope="col">
+                                        Ville de signature
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for administration in administrations %}
+                                    <tr>
+                                        <td>{{ administration.nom }}</td>
+                                        <td>{{ administration.code }}</td>
+                                        <td>{{ administration.ville_signature }}</td>
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+
+                    {% include 'common/utils/pagination.html' with paginate_list=administrations %}
+
                 </div>
             </div>
         </div>
