--- a/templates/settings/common/side_menu.html
+++ b/templates/settings/common/side_menu.html
@@ -10,12 +10,16 @@
                 <li class="fr-sidemenu__item{% if active_menu == 'users' %} fr-sidemenu__item--active{% endif %}">
                     <a class="fr-sidemenu__link" href="{% url 'settings:users' %}" target="_self" {% if active_menu == 'users' %}aria-current="page"{% endif %}>Utilisateurs</a>
                 </li>
-                <li class="fr-sidemenu__item{% if active_menu == 'bailleurs' %} fr-sidemenu__item--active{% endif %}">
-                    <a class="fr-sidemenu__link" href="{% url 'settings:bailleurs' %}" target="_self" {% if active_menu == 'bailleurs' %}aria-current="page"{% endif %}>Bailleurs</a>
-                </li>
-                <li class="fr-sidemenu__item{% if active_menu == 'administrations' %} fr-sidemenu__item--active{% endif %}">
-                    <a class="fr-sidemenu__link" href="{% url 'settings:administrations' %}" target="_self" {% if active_menu == 'administrations' %}aria-current="page"{% endif %}>Administrations</a>
-                </li>
+                {% if request.user.is_bailleur %}
+                    <li class="fr-sidemenu__item{% if active_menu == 'bailleurs' %} fr-sidemenu__item--active{% endif %}">
+                        <a class="fr-sidemenu__link" href="{% url 'settings:bailleurs' %}" target="_self" {% if active_menu == 'bailleurs' %}aria-current="page"{% endif %}>Bailleurs</a>
+                    </li>
+                {% endif %}
+                {% if request.user.is_instructeur %}
+                    <li class="fr-sidemenu__item{% if active_menu == 'administrations' %} fr-sidemenu__item--active{% endif %}">
+                        <a class="fr-sidemenu__link" href="{% url 'settings:administrations' %}" target="_self" {% if active_menu == 'administrations' %}aria-current="page"{% endif %}>Administrations</a>
+                    </li>
+                {% endif %}
             </ul>
         </div>
     </div>
